changed file definitions for the secret key and jwt